tests/vendor/valid/trivial/eq_false.c
//expect 0
//tags: trivial, binary, logical
int main() {
    return 1 == 2;
}