tests/vendor/invalid/semantics/duplicate_labels.c
//tags: simple, goto
int main() {
    int x = 0;
label:
    x = 1;
label:
    return 2;
}